# RemoteControl

./: .gitignore  Actions.qml  CMakeLists.txt  CServer.cpp  CServer.h  CSession.cpp  CSession.h  Content.qml  Dialogs.qml  Main.qml  MainPage.qml  MsgNode.cpp  MsgNode.h  MyButton.qml  README.md  centercontrol.cpp  centercontrol.h  centerview.cpp  centerview.h  cmanagement.cpp  cmanagement.h  csession.cpp  csession.h  csessionthread.cpp  csessionthread.h  data.cpp  data.h  imageprovider.cpp  imageprovider.h  logo.qrc  main.cpp  msgnode.cpp  msgnode.h  pevent.cpp  pevent.h  view.cpp  view.h  viewbridge.cpp  viewbridge.h  viewcontrol.cpp  (+8 more)
